[package]
name = "dcexport"
description = "Discord Guild Prometheus Exporter"
version = "0.1.0"
authors = [
    "Paul Wagner <github@paulwagner.dev>"
]
license = "MIT"
repository = "https://github.com/scrayosnet/dcexport"
readme = "README.md"
documentation = "https://github.com/scrayosnet/dcexport"
homepage = "https://github.com/scrayosnet/dcexport"
keywords = ["discord", "prometheus", "monitoring", "exporter"]
categories = ["development-tools", "command-line-utilities"]
edition = "2021"
rust-version = "1.75.0"

[dependencies]
prometheus-client = { version = "0.23" }
serenity = { version = "0.12" }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "tower-log", "tracing"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
